# ogma

./: .gitignore  .travis.yml  Makefile  README.md
api/: LICENSE  ogma-api.cabal  stack.yaml
api/src/Ogma/Api/: Definition.hs
client/: ogma-client.cabal  stack.yaml
client/app/: Main.hs
server/: ogma-server.cabal  stack.yaml
server/app/: Main.hs
server/models/: db.model
server/src/Ogma/: Api.hs  Server.hs
server/src/Ogma/Model/: Model.hs  Privilege.hs
