name:                ogma-api
version:             0.0
synopsis:            Ogma API definition
description:         The servant-based definition of the Ogma API
license:             MIT
license-file:        LICENSE
author:              Iky
maintainer:          hi@ikyushii.eu
copyright:           2016 Ogma Project
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Ogma.Api.Definition
  build-depends:       base >= 4.7 && < 5
                     , servant  == 0.7
                     , aeson    == 0.9.*
                     , text     == 1.2.*
  default-language:    Haskell2010

test-suite api-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , ogma-api
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010
