name:                ogma-server
version:             0.0
synopsis:            Ogma API Server
description:         The servant-based implementation of the Ogma API
license:             MIT
license-file:        LICENSE
author:              Iky
maintainer:          hi@ikyushii.eu
copyright:           2016 Ogma Project
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Ogma.Api Ogma.Model.Model Ogma.Model.Privilege
  build-depends:       base >= 4.7 && < 5
                     , ogma-api        == 0.0
                     , servant-server  == 0.7.1
                     , auth-identity
                     , aeson
                     , text
                     , persistent
                     , persistent-template
                     , persistent-sqlite
                     , time
                     , mtl
                     , transformers
                     , monad-control
  default-language:    Haskell2010

executable ogma-server-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , ogma-server
                     , ogma-api          == 0.0
                     , servant-server    == 0.7
                     , wai
                     , wai-cors
                     , warp
  default-language:    Haskell2010

test-suite ogma-server-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , ogma-server
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010
