name:                ogma-server
version:             0.0
synopsis:            Ogma API Server
description:         The servant-based implementation of the Ogma API
license:             MIT
license-file:        LICENSE
author:              Iky
maintainer:          hi@ikyushii.eu
copyright:           2016 Ogma Project
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Ogma.Api Ogma.Model.Model Ogma.Model.Privilege
  build-depends:       base >= 4.7 && < 5
                     , aeson
                     , auth-identity
                     , monad-control
                     , mtl
                     , ogma-api        == 0.0
                     , persistent
                     , persistent-sqlite
                     , persistent-template
                     , servant-server  == 0.7.1
                     , text
                     , time
                     , transformers
  default-language:    Haskell2010

executable ogma-server-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , auth-identity
                     , monad-logger
                     , ogma-api          == 0.0
                     , persistent
                     , persistent-sqlite
                     , persistent-template
                     , servant-server    == 0.7.1
                     , text
                     , transformers
                     , wai
                     , wai-cors
                     , warp
                     , ogma-server
  default-language:    Haskell2010

test-suite ogma-server-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , ogma-server
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010
